# _helpers/jwt.js
@@ -12,6 +12,7 @@ function jwt() {
             // public routes that don't require authentication
             '/user/authenticate',
             '/user/register',
+            '/get/categories'
         ]
     });
 }
