# controller/getController.js
@@ -3,17 +3,12 @@ const router = express.Router();
 const categoryService = require('../services/categoryService');
 
 
-router.get('/', getCategory);
-router.post('/create', createCategory);
+router.get('/categories', getCategory);
 function getCategory(req, res, next) {
     categoryService.getCategories()
     .then(categories => res.json(categories))
     .catch(error=> next(error))
 }
 
-function createCategory(req, res, next) {
-    categoryService.createCategory(req.body)
-  .then(categories => {res.json(categories)})
-  .catch(error => {next(error)});
-}
+
 module.exports = router;
